improved pagination for stafflist.html 21/06/2022

--- a/sendmail/templates/base.html
+++ b/sendmail/templates/base.html
@@ -213,6 +213,7 @@
 	</footer>
 	<!-- End of footer -->
 
+	<!-- JavaScript to open mobile menu -->
 	<script>
 		function myFunction() {
 		  var x = document.getElementById("mobile-menu");
@@ -223,5 +224,4 @@
 		  }
 		}
 	</script>
-
 </html>
