--- a/sendmail/templates/updatestaff.html
+++ b/sendmail/templates/updatestaff.html
@@ -147,7 +147,7 @@
                     <!-- Update -->
                     <button type="submit" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-3 px-4 border border-transparent 
                                                 text-md font-medium rounded-md text-white bg-blue-700 hover:bg-blue-600 focus:outline-none 
-                                                 focus:ring-4 focus:ring-indigo-400">
+                                                 focus:ring-4 focus:ring-blue-400">
                         <span class="absolute left-0 inset-y-0 flex items-center pl-3 inline-flex items-center">
                             <svg class="-ml-1 mr-2 h-7 w-7 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
                                 fill="currentColor" aria-hidden="true">
